@@ -1,3 +1,9 @@
+2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b12
+
+ * Fix: Copying a photo from a subalbum into the same album did not work.
+
+ * Fix: Wrong error message when try to move an item into its current place.
+
 2008-08-15 Jens Tkotz <jens@peino.de> 1.5.8-pl1-svn-b11
 
  * Fix: Deleting comments within "comments view" did not work.
